# coldsweat

./: .flake8  .gitignore  .htaccess  Coldsweat.code-workspace  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  RENAME-ME.htaccess  coldsweat.ini  config-sample  dispatch.fcgi  import_feeds.py  index.cgi  index.fcgi  makefile  package-lock.json  package.json  pyproject.toml  refresh_feeds.py  requirements.txt  server.py  setup.py  sweat.py  wsgi.py
assets/: app.js
assets/stylesheets/: _article-view.scss  _buttons.scss  _config.scss  _dialogs.scss  _forms.scss  _helpers.scss  _imports.scss  _list-view.scss  _mixins.scss  _tables.scss  _theme.scss  _tree-view.scss  (+4 more)
coldsweat/: __init__.py  app.py  app2.py  cascade.py  cli.py  commands.py  config.py  controllers.py  discovery.py  favicon.py  feed.py  fetcher.py  fever.py  filters.py  frontend.py  html.py  markup.py  models.py  opml.py  plugins.py  session.py  timeformat.py  translators.py  utilities.py  views.py
data/: README
docker/: Dockerfile  config  entrypoint.sh
docs/: coldsweet-and-tweeter.rst  conf.py  deploy.rst  fetcher-features.rst  fever_api.html  index.rst  setup.rst  using-with-nginx.rst
etc/: blacklist  config  config-sample
plugins/: hotlinks.py  scrubber.py
tests/: sample-subscriptions.opml  subscriptions.xml  test-data.sql  test-subscriptions.xml  test_coldsweet.py  test_commands.py  test_config.py  test_discovery.py  test_fetcher.py  test_fever.py  test_freshrss.py  test_frontend.py  test_markup.py  test_processor.py  test_scrub.py  test_strip.py  test_utilities.py  test_web_ui.py
(+168 files in other folders)
