[project]
name = "coldsweat"
version = "0.10.2"
authors = [
  { name="Andrea Peltrin" },
]
description = "Web RSS aggregator and reader compatible with the Fever API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "peewee >= 3.15.4,<4",
  "urllib3<2",
  "requests >= 2.28.1,<3",
  "feedparser >= 6.0.10",
  "flask >= 3.0.0,<3.1",
  "flask-login >= 0.6.3",
  "flask-cdn >= 1.5.3",
  "tomli >= 2.0.1,<3",
  "markupsafe >= 2.1,<3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Flask",
]

[project.urls]
"Homepage" = "https://github.com/passiomatic/coldsweat"
"Bug Tracker" = "https://github.com/passiomatic/coldsweat/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coldsweat", "coldsweat.main", "coldsweat.auth", "coldsweat.fever" ]

[tool.setuptools.package-data]
coldsweat = ["static/*.*", "templates/*.html"]

[project.scripts]
coldsweat = "coldsweat:cli"